Fixed the members tiles overlapping issue

--- a/public/styles/components/hero.less
+++ b/public/styles/components/hero.less
@@ -28,6 +28,14 @@
 			img {
 				width: 100%;
 			}
+
+			// Scrolling effect
+			&.position-fixed {
+				position: fixed;
+			}
+			&.position-absolute {
+				position: absolute;
+			}
 		}
 		.hero-intro-content {
 			.hv-centered;
@@ -71,6 +79,7 @@
 	//- Details
 	.hero-details {
 		padding: 6em 0;
+		background: white;
 		.description {
 			font-size: @font-size-base * 1.4;
 			p + p {
