--- a/public/styles/site/variables.less
+++ b/public/styles/site/variables.less
@@ -27,7 +27,7 @@
 // Scaffolding
 // -------------------------
 
-@body-bg:               #fbfbfb;
+@body-bg:               white;
 @text-color:            @gray;
 @gray-dull:             #ccc;
 
